# funding_arbitrage_bot_multiple

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  ADDITIONAL_BUG_FOUND.md  ADD_NEW_EXCHANGE_GUIDE.md  APPLY_FIXES.md  ARBITRAGE_AUDIT_CRITICAL_ISSUES.md  ARBITRAGE_LOGIC_AUDIT.md  ARCHITECTURE_REFACTORING.md  BARE_EXCEPT_FIXES.md  BUG_FIXES_PRODUCTION_UTILS.md  CODE_AUDIT_REPORT.md  COMPREHENSIVE_BUG_AUDIT.md  CONFIGURATION_README.md  CRITICAL_BUGS_FIXED_ROUND2.md  CRITICAL_BUGS_FIXED_ROUND4.md  CRITICAL_FIXES_ARBITRAGE_LOGIC.md  CRITICAL_FIXES_COMPLETED.md  DEEP_BUG_AUDIT_ROUND4.md  Dockerfile  ENTRY_LOGIC_AUDIT.md  ENVIRONMENT_SETUP.md  FAULT_TOLERANCE_ANALYSIS.md  FINANCIAL_SAFETY_MECHANISMS.md  FIXED_ERRORS.md  FIXES_APPLIED.md  FIXES_APPLIED_REPORT.md  FUNDING_RATE_CALCULATIONS.md  INSTALL_MANUAL.md  NUANCES_AUDIT_REPORT.md  OBSERVABILITY_SYSTEM.md  ORDER_BOOK_CRITICAL_ISSUE.md  PRODUCTION_READINESS_FIXES.md  PRODUCTION_SETUP_GUIDE.md  README.md  README_EXCHANGE_CHECK.md  RELIABILITY_SYSTEM.md  ROUND3_DEEP_AUDIT.md  (+36 more)
.github/workflows/: ci.yml  coverage-report.yml  release.yml  upstream-guard.yml
adapters/: __init__.py
adapters/core_ext/: __init__.py  logging_conf.py  state_sync.py  throttle.py
conf/: .gitignore  funding_rate_arb.yml  funding_schedules.yaml  global_conf.yml  observability_config_example.py  reliability_config_example.py
controllers/generic/: pmm.py
core_ext/: logging_conf.py  state_sync.py  throttle.py
db/: 001_initial_schema.sql  002_add_funding_rates_raw.sql  003_add_performance_indexes.sql  README.md  schema.sql
docker/: Dockerfile.extend  health_server.py
docs/: diagnostics.md  index.md  risks.md  runbooks.md
examples/: exchange_observability_integration.py  funding_arbitrage_example.py
grafana/dashboards/: hummingbot-observability.json
hummingbot/: __init__.py
hummingbot/client/command/: previous_strategy_command.py  silly_commands.py  ticker_command.py
hummingbot/client/config/: funding_arbitrage_config.py  global_config_map.py
hummingbot/connector/: connector_base.py  exchange_base.py  exchange_base.pyx  in_flight_order_base.py  in_flight_order_base.pyx
hummingbot/core/: clock.py  network_iterator.py  pubsub.py  time_iterator.py
hummingbot/core/api/: health_endpoint.py
hummingbot/core/api_throttler/: token_bucket_rate_limiter.py
hummingbot/core/data_storage/: __init__.py  data_exporter.py  database.py
hummingbot/core/data_type/: common.py  limit_order.py  order_book.py  order_book_query_result.py  order_book_tracker.py
hummingbot/core/event/: event_listener.py  event_logger.py
hummingbot/core/observability/: __init__.py  alerting.py  integration.py  metrics.py
hummingbot/core/reliability/: __init__.py  reliability_manager.py
hummingbot/core/utils/: __init__.py  circuit_breakers.py  edge.py  funding_schedule.py  time_sync_monitor.py  trading_readiness.py
hummingbot/logger/: observability_logger.py
hummingbot/strategy/: conditional_execution_state.py  script_strategy_base.py
hummingbot/strategy/__utils__/: ring_buffer.py
hummingbot/strategy/avellaneda_market_making/: avellaneda_market_making.py
hummingbot/strategy/funding_arbitrage/: README.md  __init__.py  edge_decomposition.py  start.py  (+7 more)
k8s/: sealed-secrets-example.yaml  secrets-example.yaml
k8s/helm/: Chart.yaml  alertmanager-config.yaml  prometheus-rules.yaml  values-example.yaml  values.yaml
patches/: 01-fix-order-execution.patch  02-fix-hyperliquid-schedule.patch
scripts/: environment-setup.sh  observability_demo.py  reliability_demo.py  risk_hooks.py  start.sh  v2_funding_rate_arb.py
scripts/community/: fixed_grid.py  spot_perp_arb.py
services/: __init__.py
services/controllers/: __init__.py
setup/: environment.yml
strategies/: __init__.py
strategies/funding_arbitrage/: __init__.py
test/: logger_mixin_for_test.py  test_risk_wrapped_funding_arb_stop_conditions.py
test/fixtures/: market_data.py
tools/: demo_grid_runner.py
utils/: __init__.py  rate_limiter.py  telegram_alerter.py
web3game/: README.md
web3game/docs/: concept.md  technical_plan.md
(+35 files in other folders)
